--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "aws4": "^1.13.2",
     "axios": "^1.10.0",
     "bcrypt": "5.1.1",
+    "cookie": "^1.0.2",
+    "firebase": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongoose": "8.0.0",
     "next": "14.0.1",
